_build/html/reports/Ejercicio4.log
Traceback (most recent call last):
  File "/home/jfhlewyee/Software/anaconda3/envs/book/lib/python3.8/site-packages/jupyter_cache/executors/utils.py", line 51, in single_nb_execution
    executenb(
  File "/home/jfhlewyee/Software/anaconda3/envs/book/lib/python3.8/site-packages/nbclient/client.py", line 1077, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/home/jfhlewyee/Software/anaconda3/envs/book/lib/python3.8/site-packages/nbclient/util.py", line 74, in wrapped
    return just_run(coro(*args, **kwargs))
  File "/home/jfhlewyee/Software/anaconda3/envs/book/lib/python3.8/site-packages/nbclient/util.py", line 53, in just_run
    return loop.run_until_complete(coro)
  File "/home/jfhlewyee/Software/anaconda3/envs/book/lib/python3.8/asyncio/base_events.py", line 616, in run_until_complete
    return future.result()
  File "/home/jfhlewyee/Software/anaconda3/envs/book/lib/python3.8/site-packages/nbclient/client.py", line 526, in async_execute
    await self.async_execute_cell(
  File "/home/jfhlewyee/Software/anaconda3/envs/book/lib/python3.8/site-packages/nbclient/client.py", line 822, in async_execute_cell
    self._check_raise_for_error(cell, exec_reply)
  File "/home/jfhlewyee/Software/anaconda3/envs/book/lib/python3.8/site-packages/nbclient/client.py", line 730, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply['content'])
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
from matplotlib import pyplot as plt
import numpy as np
from scipy.misc import derivative as derivative
from scipy.special import laguerre as laguerre

#Cambiar aqui para ajustar limites del eje X
r=np.linspace(0,25,100)

a0=1.0

#Cambiar aqui para usar s,p,d,etc
l=0
#Cambiar aquí para elegir limites de los numeros cuanticos n
n_min=1
n_max=4

for n in range(n_min,n_max+1):
    N=-np.power(2/(n*a0),3.0/2.0)*np.sqrt((np.math.factorial(n-l-1))/(2*n*np.power((np.math.factorial(n+l)),3.0)))
    L=laguerre(n+l)
    L=L/np.abs(L[n+l])
    assoc_L=derivative(L,2*r/(n*a0),n=2*l+1,order=2*l+3)

    R=N*(2*r/(n*a0))**l*np.exp(-r/(n*a0))*assoc_L

    plt.plot(r,R,label=n)

plt.legend()
#Cambiar aqui los titulos de los ejes
plt.xlabel("$r$")
plt.ylabel("$R$")
plt.title("$R(r)$ 1s, 2s ,3s y 4s")
plt.show()

for n in range(n_min,n_max+1):
    N=
    L=
    L=
    assoc_L=

    R=

    plt.plot(r,r**2.0*R**2.0,label=n)

plt.legend()
#Cambiar aqui los titulos de los ejes
plt.xlabel("$r$")
plt.ylabel("$4\pi r^2R^2$")
plt.title("$4\pi r^2R^2(r)$ 1s, 2s ,3s y 4s")
plt.show()
------------------

[0;36m  File [0;32m"<ipython-input-1-2e3ac3cf998c>"[0;36m, line [0;32m35[0m
[0;31m    N=[0m
[0m      ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax

SyntaxError: invalid syntax (<ipython-input-1-2e3ac3cf998c>, line 35)

